# in-mono

./: .continuerc.json  .gitignore  .prettierrc  .prettierrc.json  Cargo.toml  README.md  package-lock.json  package.json  terraform-cloud-authentication.md  terraform-cloud-sentinel.md  terraform-cloud-workflows.md  terraform-cloud.md  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/base-scripts/: install-vcpkg.sh
.github/: auto-assign.yml  labeler.yml
.github/workflows/: 21-day-responsive-challenge.yml  homepage.yml  labeler.yml  pull_request.yml
apps/21-day-challenge-responsive-layouts/: next.config.js  package.json
apps/epic-react-exercises/: package.json
apps/home/: package.json  tsconfig.json
apps/mdn-webaudio-examples/: declarations.d.ts  package.json  tsconfig.json
apps/music/: .env.development  .env.development.local.template  .env.production  README.md  next.config.js  package.json
apps/react-exercises/: next.config.js  package.json
boilerplate/docker-compose/: README.md  compose-watch-go-app.yaml  docker-compose-watch-rust-axum-api.yml
boilerplate/dockerfile/: dockerfile-golang-non-privileged-user.dockerfile  dockerfile-init-rust  dockerfile-rust-cargo-chef-debian.dockerfile  (+3 more)
challenges/: README.md
courses/brooks_builds/routing/: Cargo.toml
courses/brooks_builds/routing/src/routes/: hello_world.rs  mirror_body_json.rs  mod.rs  validate_with_serde.rs
courses/brooks_builds/todo_fullstack_course_practice/axum_0_5/: Cargo.toml
courses/brooks_builds/todo_fullstack_course_practice/axum_0_5/src/: lib.rs  main.rs
courses/brooks_builds/todo_fullstack_course_practice/axum_0_5/src/routes/: custom_json_extractor.rs  event_mapper.rs  global_data.rs  mod.rs
courses/brooks_builds/todo_fullstack_course_practice/data/: .env  Cargo.toml
courses/brooks_builds/todo_fullstack_course_practice/data/src/: create_task.rs  get_one_task.rs  get_tasks.rs  lib.rs  main.rs  partial_update_tasks.rs  update_tasks.rs
courses/brooks_builds/todo_fullstack_course_practice/data/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
headspace/: 5g.md  auth0.md  bash-history.md  cni-container-network-interface.md  coredns.md  css-transition.md  grep.md  helm.md  host.md  ipv6.md  jwt-tokens.md  markdown.md  memcached.md  mongodb.md  multipass.md  netstat.md  nmap.md  nslookup.md  open-graph.md  redis.md  regular-expressions-recipes.md  regular-expressions.md  rename.md  rust-crate-seaorm.md  sccache.md  scripts.md  sentry.md  shellcheck.md  sqlite.md  tar.md  valgrind.md  websockets.md  yaml.md
playgrounds/rust/axum_api/: Cargo.toml  Dockerfile  Dockerfile.development  README.md
playgrounds/rust/axum_api/src/: main.rs
scripts/: aws_creds_export.sh  certbot_certonly.sh
(+2175 files in other folders)
