[package]
name = "axum_0_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["headers", "macros", "json"] }
data = { path = "../data" }
lazy_static = "1.4.0"
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
